--- a/src/app/modules/nav-bar/nav-bar.component.scss
+++ b/src/app/modules/nav-bar/nav-bar.component.scss
@@ -26,17 +26,13 @@
 }
 
 .nav-link-text {
+  color: white;
   margin-left: 12px;
   margin-top: 5px;
 }
 
-.logout {
-  position: relative;
-  left: 20px;
-  top: 7px;
-}
-
 .logo-container {
+  display: block;
   width: 100%;
   border-bottom: 1px solid white;
   margin-bottom: 15px;
@@ -49,15 +45,6 @@
   margin-left: 41px;
   margin-bottom: 50px;
   margin-top: 15px;
-}
-
-.section-title {
-  color: #ddd;
-  font-size: 15px;
-  padding: {
-    left: 15px;
-    bottom: 5px;
-  }
 }
 
 .nav-list-section {
@@ -76,12 +63,6 @@
     padding: 0 16px;
     position: absolute;
     bottom: 0;
-
-    .terms-of-use, .privacy-policy {
-      font-size: 12px;
-      color: white;
-      margin-bottom: 12px;
-    }
 
     .copyright {
       margin-top: 10px;
