--- a/src/app/modules/user/user-list/user-list.component.html
+++ b/src/app/modules/user/user-list/user-list.component.html
@@ -32,6 +32,7 @@
         <table stTable class="users-list-container__table">
           <thead>
           <tr>
+            <th width='20px'></th>
             <th class="users-list-container__table__header__id">{{ 'UserListComponent.table.id' | translate }}</th>
             <th class="users-list-container__table__header__name">{{ 'UserListComponent.table.name' | translate }}</th>
             <th class="users-list-container__table__header__email">{{ 'UserListComponent.table.email' | translate }}</th>
@@ -43,24 +44,21 @@
           <tbody>
           <tr *ngFor='let user of usersList'>
             <ng-container>
-              <!-- <td>
-                <div fxLayout="row" fxLayoutAlign="center center">
-                </div>
-              </td> -->
+              <td></td>
               <td class="users-list-container__users-list__item__property__id">
-                <span>{{user.id}}</span>
+                <span>{{ user.id }}</span>
               </td>
               <td class="users-list-container__users-list__item__property__name">
-                <span>{{user.firstName + " " + user.lastName}}</span>
+                <span>{{ user.firstName + " " + user.lastName }}</span>
               </td>
               <td class="users-list-container__users-list__item__property__email">
-                <span>{{user.email}}</span>
+                <span>{{ user.email }}</span>
               </td>
               <td class="users-list-container__users-list__item__property__role">
-                <span>{{user.roleId}}</span>  <!-- Aca iria el label del rol -->
+                <span>{{ user.role.label }}</span>  <!-- Aca iria el label del rol -->
               </td>
               <td class="users-list-container__users-list__item__property__status">
-                <span>{{user.isActive}}</span>
+                <span>{{ (user.isActive ? 'UserListComponent.statusActive' : 'UserListComponent.statusInactive') | translate }}</span>
               </td>             
             </ng-container>
           </tr>
