--- a/src/app/modules/nav-bar/nav-bar.component.html
+++ b/src/app/modules/nav-bar/nav-bar.component.html
@@ -8,6 +8,7 @@
       </span>
 
       <a
+        *ngIf='canAccessUserModule'
         mat-list-item
         class="nav-link"
         [routerLink]="['users']"
@@ -15,6 +16,17 @@
       >
         <mat-icon>group</mat-icon>
         <div class="nav-link-text">{{ 'UserListComponent.title' | translate }}</div>
+      </a>
+
+      <a
+        *ngIf='canAccessProviderModule'
+        mat-list-item
+        class="nav-link"
+        [routerLink]="['providers']"
+        routerLinkActive="sidebar__nav-link&#45;&#45;active"
+      >
+        <mat-icon>group</mat-icon>
+        <div class="nav-link-text">{{ 'ProviderListComponent.title' | translate }}</div>
       </a>
 
       <section class="nav-list-section-footer">
