ST-35 Toast notification

--- a/src/app/modules/user/new-user/new-user.component.html
+++ b/src/app/modules/user/new-user/new-user.component.html
@@ -59,5 +59,6 @@
   <button class="btn btn-info my-4 btn-block" type="submit">Submit</button>
 
   <hr>
+  <div class="reminder-note">*Password must have a minimum of 8 characters alpha-numerics, including at least one uppercase letter.</div>
 
 </form>
