--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -11,13 +11,13 @@
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">      
       <mat-form-field class="input" appearance="outline" >
         <mat-label>{{ 'LoginComponent.user-field' | translate }}</mat-label>
-        <input matInput type="text" formControlName="username"/>
+        <input matInput class="loginInput" type="text" formControlName="username"/>
         <app-form-errors fieldName="username" [control]="loginForm.get('username')"></app-form-errors>
       </mat-form-field>
 
       <mat-form-field class="input" appearance="outline" >
         <mat-label>{{ 'LoginComponent.pwd-field' | translate }}</mat-label>
-        <input matInput type="password" formControlName="password"/>
+        <input matInput class="loginInput" type="password" formControlName="password"/>
         <app-form-errors fieldName="password" [control]="loginForm.get('password')"></app-form-errors>
       </mat-form-field>
 
