--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -8,6 +8,17 @@
   font-weight: 400 !important;
 }
 
+.label-title {
+  color: $st-grey-700;
+  font-weight: 300;
+  font-size: 18px;
+}
+
+.form-group-divider {
+  margin-bottom: 15px !important;
+  margin-top: 5px !important;
+}
+
 .page-tabs {
   margin-bottom: 0 !important;
   width: 100%;
