--- a/src/app/modules/user/new-user/new-user.component.html
+++ b/src/app/modules/user/new-user/new-user.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div>
-    <div *ngIf="registerForm" [formGroup]="registerForm" (ngSubmit)="onSubmit()" fxLayout="column" fxFlex="50">
+    <form *ngIf="registerForm" [formGroup]="registerForm" (ngSubmit)="onSubmit()" fxLayout="column" fxFlex="50">
       <div fxLayout="column" fxFlex="100" style="margin-top: 3%; width: 100%">
         <label class="label-title">{{ 'NewUserComponent.userData' | translate }}</label>
         <mat-divider class="form-group-divider"></mat-divider>
@@ -30,18 +30,18 @@
               valueKey="id"
               optionKey="label"
             >
-              <mat-label label-content>{{ 'NewUserComponent.role' | translate }}</mat-label>
-              <app-form-errors error-content fieldName="{{ 'NewUserComponent.role' | translate }}" [control]="registerForm.get('role')"></app-form-errors>
+              <mat-label label-content>{{ 'NewUserComponent.role-field' | translate }}</mat-label>
+              <app-form-errors error-content fieldName="{{ 'NewUserComponent.role-field' | translate }}" [control]="registerForm.get('role')"></app-form-errors>
             </app-form-select>            
           </div>
 
           <div fxLayout="row">
             <div class="input-container" fxFlex="50%" style="width: 100%">
               <mat-form-field class="input" appearance="outline">
-                <mat-label>{{ 'NewUserComponent.password' | translate }}</mat-label>
+                <mat-label>{{ 'NewUserComponent.password-field' | translate }}</mat-label>
                 <input matInput type="password" autocomplete="off" formControlName="password">
                 <app-form-errors
-                  fieldName="{{ 'NewUserComponent.password' | translate }}"
+                  fieldName="{{ 'NewUserComponent.password-field' | translate }}"
                   [control]="registerForm.get('password')"
                   [customErrorMsg]="customPasswordErrorMsgs"
                 >
@@ -51,10 +51,10 @@
 
             <div class="input-container" fxFlex="50%" style="width: 100%">
               <mat-form-field class="input" appearance="outline">
-                <mat-label>{{ 'NewUserComponent.confirm-password' | translate }}</mat-label>
+                <mat-label>{{ 'NewUserComponent.confirm-password-field' | translate }}</mat-label>
                 <input matInput type="password" autocomplete="off" formControlName="confirmPassword">
                 <app-form-errors
-                  fieldName="{{ 'NewUserComponent.confirm-password' | translate }}"
+                  fieldName="{{ 'NewUserComponent.confirm-password-field' | translate }}"
                   [control]="registerForm.get('confirmPassword')"
                   [customErrorMsg]="customPasswordErrorMsgs"
                 >
@@ -63,8 +63,70 @@
             </div>
           </div>
         </div>
+        
+        <label class="label-title">{{ 'NewUserComponent.personalData' | translate }}</label>
+        <mat-divider class="form-group-divider"></mat-divider>
+        
+        <div fxLayout="row">
+          <div class="input-container" fxFlex="50%" style="width: 100%">
+            <mat-form-field class="input" appearance="outline">
+              <mat-label>{{ 'NewUserComponent.firstName-field' | translate }}</mat-label>
+                <input matInput type="text" autocomplete="off" formControlName="firstName">
+                <app-form-errors
+                  fieldName="{{ 'NewUserComponent.firstName-field' | translate }}"
+                  [control]="registerForm.get('firstName')"
+                  [customErrorMsg]="customFirstNameErrorMsgs"
+                >
+                </app-form-errors>
+            </mat-form-field>
+          </div>
+
+          <div class="input-container" fxFlex="50%" style="width: 100%">
+            <mat-form-field class="input" appearance="outline">
+              <mat-label>{{ 'NewUserComponent.lastName-field' | translate }}</mat-label>
+                <input matInput type="text" autocomplete="off" formControlName="lastName">
+                <app-form-errors
+                  fieldName="{{ 'NewUserComponent.lastName-field' | translate }}"
+                  [control]="registerForm.get('lastName')"
+                  [customErrorMsg]="customLastNameErrorMsgs"
+                >
+                </app-form-errors>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <label class="label-title">{{ 'NewUserComponent.contactData' | translate }}</label>
+        <mat-divider class="form-group-divider"></mat-divider>
+
+        <div fxLayout='row'>
+          <div class="input-container" fxFlex="50%" style="width: 100%">
+            <mat-form-field class="input" appearance="outline">
+              <mat-label>{{ 'NewUserComponent.email-field' | translate }}</mat-label>
+              <input matInput type="email" autocomplete="off" formControlName="email">
+              <app-form-errors error-content fieldName="{{ 'NewUserComponent.email-field' | translate }}" [control]="registerForm.get('email')"></app-form-errors>
+            </mat-form-field>
+          </div>
+
+          <div class="input-container" fxFlex="50%" style="width: 100%">
+            <mat-form-field class="input" appearance="outline">
+              <mat-label>{{ 'NewUserComponent.confirmEmail-field' | translate }}</mat-label>
+              <input matInput type="email" autocomplete="off" formControlName="confirmEmail">
+              <app-form-errors error-content 
+                fieldName="{{ 'NewUserComponent.confirmEmail-field' | translate }}"
+                [control]="registerForm.get('confirmEmail')"
+                [customErrorMsg]="customConfirmEmailErrorMsgs"
+              >
+              </app-form-errors>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <mat-divider class="form-group-divider"></mat-divider>
+        <div fxLayout='row' fxFlex="50%" style="width: 25%">
+          <button class="btn btn-info my-4 btn-block" type="submit">{{ 'NewUserComponent.submit' | translate }}</button>
+        </div>
       </div>
-    </div>
+    </form>
   </div>
 </div>
 
