--- a/src/app/modules/user/user-list/user-list.component.html
+++ b/src/app/modules/user/user-list/user-list.component.html
@@ -39,7 +39,8 @@
                 <th class="users-list-container__table__header__name">{{ 'UserListComponent.table.name' | translate }}</th>
                 <th class="users-list-container__table__header__email">{{ 'UserListComponent.table.email' | translate }}</th>
                 <th class="users-list-container__table__header__role">{{ 'UserListComponent.table.role' | translate }}</th>
-                <th class="users-list-container__table__header__status">{{ 'UserListComponent.table.status' | translate }}</th>             
+                <th class="users-list-container__table__header__status">{{ 'UserListComponent.table.status' | translate }}</th>
+                <th class="users-list-container__table__header__actions">{{ 'UserListComponent.table.actions' | translate }}</th>
               </tr>
               </thead>
 
@@ -61,7 +62,10 @@
                   </td>
                   <td class="users-list-container__users-list__item__property__status">
                     <span>{{ (user.isActive ? 'UserListComponent.statusActive' : 'UserListComponent.statusInactive') | translate }}</span>
-                  </td>             
+                  </td>
+                  <td class="users-table__actions" *ngIf="true">
+                    <app-collapsible-action-bar [row]="user" [inlineActions]="userActions"></app-collapsible-action-bar>
+                  </td>
                 </ng-container>
               </tr>
               </tbody>
