Added top nav-bar

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -6,6 +6,15 @@
   </ng-container>
 
   <ng-template #contentBody>
+    <mat-toolbar class='header'>
+      <header>
+        <div class='header-container'>
+          <div class='header-right'>
+            <app-user-dropdown></app-user-dropdown>
+          </div>
+        </div>
+      </header>
+    </mat-toolbar>
     <div class="content-body calculated-content-body">
       <router-outlet></router-outlet>
     </div>
