--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -15,3 +15,38 @@ $regular-content-body-height: calc(100vh - #{$base-height});
   height: $regular-content-body-height;
   padding: $content-body-padding;
 }
+
+.header {
+  background: $st-grey-100;
+  border-bottom: $header-width-border-bottom darken($st-grey-100, 15%) solid;
+  z-index: 10;
+}
+
+header {
+  display: flex;
+  flex: 1;
+}
+
+.header-container {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+mat-toolbar {
+  height: $header-container-height !important;
+  box-sizing: border-box !important;
+}
+
+.calculated-content-body {
+  height: $regular-content-body-height;
+  padding: $content-body-padding;
+}
